# ifgf

./: CMakeLists.txt  Makefile  README.md  boundingbox.hpp  chebinterp.cpp  chebinterp.hpp  combined_field_helmholtz_ifgf.hpp  cone_domain.hpp  config.hpp  double_layer_helmholtz_ifgf.hpp  grad_helmholtz_ifgf.hpp  helmholtz_ifgf.hpp  ifgfoperator.hpp  laplace_ifgf.hpp  modified_helmholtz_ifgf.hpp  octree.hpp  py_ifgf.cpp  test_chebinterp.cpp  test_ifgf.cpp  util.hpp  zorder_less.hpp
